Fixed overflow using box sizing

--- a/styles.css
+++ b/styles.css
@@ -24,20 +24,31 @@ div{
 
     width: 800px;
     height: 800px;  
-    flex-direction: column;
-    border : solid 2px orange;
-    
+    flex-direction: column;   
+    border : 2px solid red;
+    min-height: 100%;
+
+
 }
 
 .hori{
 
     
-    /* border : 1px solid red; */
+    /* border : 1px solid rgb(0, 4, 255); */
+    padding:0;
+    margin:0;  
    
+    
+    
 }
 .box {
      
-    border : 0.1px solid blue;
+    border : 0.1px solid rgb(154, 154, 215);
+    padding:0;
+    box-sizing: border-box;
+    margin:0;   
+    
+
  
 }
 
